sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: type mismatch;
 found   : Double
 required: Int
	if (plusPetit(i,i+1)){
                      ^AlgGnomeSort:7: error: type mismatch;
 found   : Double
 required: Int
	}else {echange(i,i+1)
                       ^AlgGnomeSort:10: error: value ==- is not a member of Double
	if (i==-1) {
             ^